third_party/move/move-compiler-v2/tests/lambda/inline-parity/generics.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::foreach` has a function parameter:
  ┌─ tests/lambda/inline-parity/generics.move:5:16
  │
5 │     public fun foreach<X>(v: &vector<X>, action: |&X|) {
  │                ^^^^^^^                   ------ Parameter `action` has function-valued type `|&X|`.
